adding more files

--- a/index7.ipynb
+++ b/index7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "948ea449",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,10 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e1d04996",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sunda\\AppData\\Local\\Temp\\ipykernel_7444\\2986204818.py:2: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-tavily package and should be used instead. To use it run `pip install -U :class:`~langchain-tavily` and import as `from :class:`~langchain_tavily import TavilySearch``.\n",
+      "  tavali = TavilySearchResults()\n"
+     ]
+    }
+   ],
    "source": [
     "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\")\n",
     "tavali = TavilySearchResults()"
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "38ca2b11",
    "metadata": {},
    "outputs": [],
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "92aa6c79",
    "metadata": {},
    "outputs": [],
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b836f75e",
    "metadata": {},
    "outputs": [],
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b5e9a399",
    "metadata": {},
    "outputs": [],
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d5070799",
    "metadata": {},
    "outputs": [],
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fd39868b",
    "metadata": {},
    "outputs": [],
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d2972c6b",
    "metadata": {},
    "outputs": [],
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "cff50bca",
    "metadata": {},
    "outputs": [],
@@ -206,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "b8c5dd14",
    "metadata": {},
    "outputs": [
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "ddb36984",
    "metadata": {},
    "outputs": [
@@ -259,23 +268,23 @@
       " -------------------------sentiment_summary------------------------\n",
       "\n",
       "\n",
-      "Overall Market Sentiment: Mixed\n",
+      "Market Sentiment: Mixed\n",
       "\n",
-      "The news presents a mixed outlook for SentinelOne (S). While some sources highlight positive aspects like strong year-over-year growth projections and a \"Leader\" designation in Gartner's Magic Quadrant,  other information points to bearish sentiment reflected in short-term price predictions and a \"Hold\" Zacks Rank.\n",
+      "The news contains conflicting signals. While some short-term predictions suggest a bearish trend with several short recommendations and a low Fear & Greed index,  long-term forecasts and positive YTD/1-year returns, along with positive news about the company's performance and recognition in the industry, point towards a more positive outlook.\n",
       "\n",
       "\n",
       " -------------------------risk_analysis------------------------\n",
       "\n",
       "\n",
-      "Without a Price-to-Earnings (PE) ratio, a complete risk assessment is impossible. However, a market capitalization of ₹5748665856 suggests a relatively small-to-medium sized company, implying moderate risk inherent in smaller-cap stocks, particularly within the volatile technology sector.  Further analysis, including the PE ratio and financial statements, is necessary for a definitive risk classification.\n",
+      "Without a Price-to-Earnings (PE) ratio, a complete risk assessment is impossible. However, a market capitalization of ₹574.87 crore (approximately $70 million USD) suggests a relatively small-cap company, inherently carrying **moderate to high risk**.  The technology sector itself is known for its volatility, further contributing to the higher end of this risk range.\n",
       "\n",
       "\n",
       " -------------------------recommendation------------------------\n",
       "\n",
       "\n",
-      "SentinelOne (S) is a bit of a mixed bag right now.  The company shows promise with strong growth projections and a positive industry ranking, which is encouraging. However, the lack of a PE ratio makes it difficult to get a true handle on its valuation and risk.  The fact that it's a mid-sized tech company adds to the inherent volatility.  The mixed market sentiment and a \"Hold\" recommendation from Zacks further cloud the picture.\n",
+      "SentinelOne (S) presents a bit of a mixed bag.  While the company has seen positive performance recently and positive industry recognition, the current market sentiment is uncertain.  The lack of a PE ratio makes a full financial assessment difficult, but the relatively small market cap suggests a higher risk investment.  Essentially, you're looking at a potentially high-reward, high-risk situation.\n",
       "\n",
-      "Therefore, I wouldn't recommend jumping in headfirst.  More research is needed.  Before investing in SentinelOne, you should definitely dig deeper into their financials –  finding that missing PE ratio and examining their balance sheet and cash flow statements is crucial.  Only with a more complete picture of their financial health and future prospects can you make an informed decision about whether this is a worthwhile investment for your portfolio.  Consider waiting for a clearer picture before committing any significant capital.\n"
+      "I wouldn't recommend this stock for risk-averse investors.  If you have a higher risk tolerance and a longer-term investment horizon, and you believe in the company's long-term prospects despite the current market uncertainty, then it *might* be worth considering.  However,  thorough due diligence, including a deeper dive into the financials to understand the absence of a PE ratio and any potential underlying issues, is absolutely critical before making any investment decision.  Consider consulting a financial advisor to discuss your personal risk tolerance and investment goals before investing in SentinelOne.\n"
      ]
     }
    ],
