--- a/Persistance.ipynb
+++ b/Persistance.ipynb
@@ -429,7 +429,7 @@
     "\n",
     "def step_2(state: CrashState) -> CrashState:\n",
     "    print(\"⏳ Step 2 hanging... now manually interrupt from the notebook toolbar (STOP button)\")\n",
-    "    time.sleep(1000)  # Simulate long-running hang\n",
+    "    time.sleep(1000)  \n",
     "    return {\"step2\": \"done\"}\n",
     "\n",
     "def step_3(state: CrashState) -> CrashState:\n",
